--- a/TestAppLivit/Base.lproj/Main.storyboard
+++ b/TestAppLivit/Base.lproj/Main.storyboard
@@ -7,96 +7,6 @@
     </dependencies>
     <scenes>
         <!--Word Set Table View Controller-->
-        <scene sceneID="3rt-2N-jgB">
-            <objects>
-                <tableViewController id="hgz-rF-pkM" customClass="LIVWordSetTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lDi-3x-M8f">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="SSf-mv-daG">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
-                            <connections>
-                                <outlet property="delegate" destination="hgz-rF-pkM" id="dQL-Dh-IP5"/>
-                            </connections>
-                        </searchBar>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="wordCell" id="6Mu-rB-Rk6" customClass="LITWordCell">
-                                <rect key="frame" x="0.0" y="72" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Mu-rB-Rk6" id="rea-mE-zeM">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Occurrences" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yub-Vf-RIq">
-                                            <rect key="frame" x="392" y="8" width="200" height="27.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="200" id="Y4v-m4-oFO"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Word" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fj1-38-J8H">
-                                            <rect key="frame" x="15" y="8" width="377" height="27.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="143" id="nsq-T5-4uR"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="nsq-T5-4uR"/>
-                                                </mask>
-                                            </variation>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="yub-Vf-RIq" firstAttribute="top" secondItem="rea-mE-zeM" secondAttribute="topMargin" id="5ce-ko-caY"/>
-                                        <constraint firstItem="yub-Vf-RIq" firstAttribute="leading" secondItem="Fj1-38-J8H" secondAttribute="trailing" id="8mR-CX-DCs"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="yub-Vf-RIq" secondAttribute="trailing" id="AFP-7g-urC"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="yub-Vf-RIq" secondAttribute="bottom" id="FJU-t3-2HU"/>
-                                        <constraint firstItem="Fj1-38-J8H" firstAttribute="leading" secondItem="rea-mE-zeM" secondAttribute="leadingMargin" constant="7" id="NsE-Lk-d57"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Fj1-38-J8H" secondAttribute="bottom" id="XYr-fC-hfD"/>
-                                        <constraint firstItem="Fj1-38-J8H" firstAttribute="top" secondItem="rea-mE-zeM" secondAttribute="topMargin" id="vlt-Ge-RSw"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="occurrences" destination="yub-Vf-RIq" id="7za-kf-1LC"/>
-                                    <outlet property="word" destination="Fj1-38-J8H" id="pVl-J8-fqe"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="hgz-rF-pkM" id="avW-Bb-s1S"/>
-                            <outlet property="delegate" destination="hgz-rF-pkM" id="DJW-Kg-v2V"/>
-                        </connections>
-                    </tableView>
-                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
-                    <connections>
-                        <outlet property="searchBar" destination="SSf-mv-daG" id="5f4-Lw-PCW"/>
-                        <outlet property="searchDisplayController" destination="xYE-g5-IEr" id="xca-ll-unC"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="r1H-4f-FFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="xYE-g5-IEr">
-                    <connections>
-                        <outlet property="delegate" destination="hgz-rF-pkM" id="Y16-Cz-3KB"/>
-                        <outlet property="searchBar" destination="SSf-mv-daG" id="HC7-ja-Yeg"/>
-                        <outlet property="searchContentsController" destination="hgz-rF-pkM" id="qXX-ps-rJx"/>
-                        <outlet property="searchResultsDataSource" destination="hgz-rF-pkM" id="f1O-7m-9Ry"/>
-                        <outlet property="searchResultsDelegate" destination="hgz-rF-pkM" id="LIH-MU-tZE"/>
-                    </connections>
-                </searchDisplayController>
-            </objects>
-            <point key="canvasLocation" x="665" y="375"/>
-        </scene>
-        <!--Word Set Table View Controller-->
         <scene sceneID="LKC-Dq-xvX">
             <objects>
                 <viewController id="iss-zg-sod" customClass="LIVWordSetTableViewController" sceneMemberID="viewController">
@@ -108,16 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aFy-De-cXm">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="kmG-Ij-c15"/>
-                                </constraints>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="iss-zg-sod" id="kdd-hD-cPw"/>
-                                </connections>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qPx-s4-EF8">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -144,26 +44,29 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="0hz-wS-uqO">
-                                                    <rect key="frame" x="290" y="12" width="20" height="20"/>
-                                                </activityIndicatorView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rat-2z-nNV">
+                                                    <rect key="frame" x="274.5" y="11" width="52" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.30546320921985815" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="MC5-V4-dIm" firstAttribute="bottom" secondItem="Bup-b0-HTO" secondAttribute="bottomMargin" id="38C-9x-kL6"/>
                                                 <constraint firstItem="b98-cb-ca5" firstAttribute="bottom" secondItem="Bup-b0-HTO" secondAttribute="bottomMargin" id="Hlh-fD-YHQ"/>
                                                 <constraint firstItem="MC5-V4-dIm" firstAttribute="top" secondItem="Bup-b0-HTO" secondAttribute="topMargin" id="NSn-Xj-LGA"/>
+                                                <constraint firstItem="rat-2z-nNV" firstAttribute="centerY" secondItem="Bup-b0-HTO" secondAttribute="centerY" id="TSE-Bp-VpY"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="MC5-V4-dIm" secondAttribute="trailing" constant="10" id="Tkv-K8-7AL"/>
                                                 <constraint firstItem="b98-cb-ca5" firstAttribute="leading" secondItem="Bup-b0-HTO" secondAttribute="leadingMargin" constant="10" id="Wb1-aP-ySU"/>
+                                                <constraint firstItem="rat-2z-nNV" firstAttribute="centerX" secondItem="Bup-b0-HTO" secondAttribute="centerX" id="b7R-Jy-3HS"/>
                                                 <constraint firstItem="MC5-V4-dIm" firstAttribute="leading" secondItem="b98-cb-ca5" secondAttribute="trailing" id="eeu-rM-aO8"/>
-                                                <constraint firstItem="0hz-wS-uqO" firstAttribute="centerX" secondItem="Bup-b0-HTO" secondAttribute="centerX" id="gtQ-DB-oOG"/>
                                                 <constraint firstItem="MC5-V4-dIm" firstAttribute="leading" secondItem="b98-cb-ca5" secondAttribute="trailing" id="kQa-uQ-xKd"/>
-                                                <constraint firstItem="0hz-wS-uqO" firstAttribute="centerY" secondItem="Bup-b0-HTO" secondAttribute="centerY" id="l1N-Re-7Bg"/>
                                                 <constraint firstItem="b98-cb-ca5" firstAttribute="top" secondItem="Bup-b0-HTO" secondAttribute="topMargin" id="zY8-8g-PPm"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="occurrences" destination="MC5-V4-dIm" id="6es-Q9-JrJ"/>
-                                            <outlet property="spinner" destination="0hz-wS-uqO" id="feM-5e-9xK"/>
+                                            <outlet property="status" destination="rat-2z-nNV" id="rge-ds-2Gp"/>
                                             <outlet property="word" destination="b98-cb-ca5" id="m5p-kK-4ak"/>
                                         </connections>
                                     </tableViewCell>
@@ -173,6 +76,16 @@
                                     <outlet property="delegate" destination="iss-zg-sod" id="zbI-pH-YCX"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aFy-De-cXm">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="kmG-Ij-c15"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="iss-zg-sod" id="kdd-hD-cPw"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
